<?xml version="1.0" encoding="utf-8"?>
    <!--
  ~ Copyright (c) Roman Tsovanyan
  -->

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:baselineAligned="false"
        tools:context=".EditEventActivity"
        android:id="@+id/addEditScrollView"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
    >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/habbitname"
                android:id="@+id/textView" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/editTextName"
                android:enabled="true"
                android:editable="true"
                android:layout_gravity="left"
                android:inputType="text" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/habbitdesc"
                android:id="@+id/textView2" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/editTextDesc"
                android:enabled="true"
                android:editable="true"
                android:layout_gravity="left"
                android:inputType="text" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/habicon"
                android:id="@+id/textView4" />

            <Spinner
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:id="@+id/spinnerIcon" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/notifyhourname"
                android:id="@+id/textView3" />

            <Spinner
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/spinnerNotifyHour" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/buttonSave"
                android:id="@+id/buttonSave"
                android:layout_gravity="center_horizontal"
                 />

        </LinearLayout>
    </ScrollView>

